# MathPlot

./: CMakeLists.txt  build.sh  compile_commands.json
.cache/clangd/index/: Main.cpp.E507D9DC0CE54397.idx  MathAnalys.cpp.ED4AAA818646858D.idx  MathAnalys.h.3AB22ABBE73AFDD9.idx  Matrix.h.B5BA5017AE61179B.idx  RungeKutt.cpp.7FBBACB1269A2A94.idx  RungeKutt.h.578F5A3D35748DA2.idx  interpolation.cpp.3605711E8BFA7DF4.idx  interpolation.h.532B55899CBB165C.idx  iterator.h.8DABE4DD40EC18CF.idx  matrix.h.356BE95350F175C5.idx
include/: RungeKutt.h  interpolation.h  matrix.h
source/: Main.cpp  MathAnalys.cpp  RungeKutt.cpp  interpolation.cpp
